@@ -87,6 +87,7 @@ export(rotate_tree)
 export(scaleClade)
 export(scale_color)
 export(scale_x_ggtree)
+export(set_hilight_legend)
 export(stat_balance)
 export(stat_hilight)
 export(subview)
